Seminar#attendees are scoped by 'booked' by default now

--- a/app/views/seminars/_table.html.slim
+++ b/app/views/seminars/_table.html.slim
@@ -23,7 +23,7 @@
               - if seminar.canceled
                 span.label.label-info< ausgefallen
             td.icons
-              => fa_icon 'users', text: seminar.attendees.booked.count
+              => fa_icon 'users', text: seminar.attendees.count
               => fa_icon 'calendar', text: seminar.events.count
               /- if seminar.bookings.any?
                 = progress_bar_for_bookings(seminar)
