--- a/app/views/seminars/show.html.slim
+++ b/app/views/seminars/show.html.slim
@@ -2,7 +2,7 @@
 
 div
   ul.nav.nav-tabs
-    li.active: a data-toggle="tab" href="#attendees"   Teilnehmer (#{@seminar.attendees.booked.count})
+    li.active: a data-toggle="tab" href="#attendees"   Teilnehmer (#{@seminar.attendees.count})
     li:        a data-toggle="tab" href="#invoices"    Rechnungen
     li:        a data-toggle="tab" href="#general"     Allgemein
     li:        a data-toggle="tab" href="#categories"  Themen
