--- a/app/views/seminars/category.html.slim
+++ b/app/views/seminars/category.html.slim
@@ -1,7 +1,7 @@
 = render 'seminars/index/header'
 
 .row
-  .col-md-3 = render 'seminars/index/categories', categories: current_catalog.categories.includes(children: :children).roots
+  .col-md-3 = render 'seminars/index/categories', categories: current_catalog.categories.roots
   .col-md-9
     = render 'table', seminars: @seminars, header: false
     .row: .col-md-12: .pull-right = paginate @seminars
