--- a/app/views/seminare/index.html.slim
+++ b/app/views/seminare/index.html.slim
@@ -9,15 +9,16 @@
 table.seminars.table
   tbody
     - @seminars.each do |seminar|
-      tr class=('time-over' unless seminar.bookable?)
-        td.number
-          = link_to seminar.number, seminar_visitor_url(seminar)
-          br
-          small.text-muted = seminar.year
-        td.title = link_to seminar.title, seminar_visitor_url(seminar)
-        td = seminar.location&.name
-        td = seminar.teachers.map(&:name).join(', ')
-        td = ldate(seminar.events.first&.date)
+      - cache seminar do
+        tr class=('time-over' unless seminar.bookable?)
+          td.number
+            = link_to seminar.number, seminar_visitor_url(seminar)
+            br
+            small.text-muted = seminar.year
+          td.title = link_to seminar.title, seminar_visitor_url(seminar)
+          td = seminar.location&.name
+          td = seminar.teachers.map(&:name).join(', ')
+          td = ldate(seminar.events.first&.date)
 
 sass:
   form
