--- a/app/views/seminars/index/_categories.html.slim
+++ b/app/views/seminars/index/_categories.html.slim
@@ -1,9 +1,10 @@
 ul.nav.nav-pills.nav-stacked.categories
   - categories.each do |category|
     - active = @category.in?(category.descendants)
-    li class=('active' if active)
-      - label = "#{category.display_name} (#{category.seminars_count})"
-      /- label = category.display_name
-      = link_to label, category_seminars_url(category), title: label
-      - if category.children.any?
-        = render 'seminars/index/categories', categories: category.children
+    - cache [category, active] do
+      li class=('active' if active)
+        - label = "#{category.display_name} (#{category.seminars_count})"
+        /- label = category.display_name
+        = link_to label, category_seminars_url(category), title: label
+        - if category.children.any?
+          = render 'seminars/index/categories', categories: category.children
