--- a/app/views/seminars/index/_header.html.slim
+++ b/app/views/seminars/index/_header.html.slim
@@ -3,7 +3,7 @@
   .col-md-9.col-md-offset-3
     .page-header
       h2
-        - count = @seminars.count
+        - count = @seminars.total_count
         - title = "#{count} #{Seminar.model_name.human count: count}"
         - if @seminar.respond_to?(:total_count) && @seminars.total_count != count
           - title += " (#{@seminars.total_count})"
