--- a/app/views/seminars/versions.html.slim
+++ b/app/views/seminars/versions.html.slim
@@ -21,20 +21,21 @@ div
     table.standard-table
       thead
         tr
-          th width="10%"
+          th width="2%"
+          th width="8%"
           th width="45%" Vorher
           th width="45%" Nachher
       tbody
         - @seminar.versions.reorder(created_at: :desc).each do |version|
           tr
-            th colspan=3
+            th colspan=4
               h4
-                = User.find(version.whodunnit).username
-                | ,
-                =< ldate version.created_at
+                => User.find(version.whodunnit).username
+                small title=ldate(version.created_at) = ldate(version.created_at, format: :short3)
           - YAML.load(version.object_changes).each do |field, (before, after)|
             - next if field.in?(hidden_fields) || [before, after].all?(&:blank?)
             tr
+              td
               th = Seminar.human_attribute_name field
               td = version_value before
               td = version_value after
