layouter and finished for seminar

--- a/app/views/seminars/_status.html.slim
+++ b/app/views/seminars/_status.html.slim
@@ -1,3 +1,5 @@
+- if seminar.layout_finished?
+  span.label.label-info>(title=ldate(seminar.layout_finished_at)) Layout fertig
 - if seminar.archived
   span.label.label-warning archiviert
 - elsif seminar.published
