--- a/app/views/seminars/category.html.slim
+++ b/app/views/seminars/category.html.slim
@@ -1,13 +1,13 @@
 = render 'seminars/index/header'
 
-- current_path = @category.path
-ol.breadcrumb
-  - current_path.each do |cat|
-    li = link_to cat.name, seminars_url(category_id: cat.id)
-
+- current_path = @category&.path.to_a
 .row
-  .col-md-3 = render 'seminars/index/categories', categories: current_catalog.categories.roots,
-    current_path: current_path
+  .col-md-3
+    ul.nav.nav-pills.nav-stacked.categories
+      li class=('active' unless @category )
+        = link_to "ohne (#{@uncategorized_seminars.count})", category_seminars_url(nil)
+    = render 'seminars/index/categories', categories: current_catalog.categories.roots,
+      current_path: current_path
 
   .col-md-9
     = render 'table', seminars: @seminars, header: false
