--- a/app/views/seminars/date.html.slim
+++ b/app/views/seminars/date.html.slim
@@ -8,4 +8,4 @@
         li class=('active' if @month == index) = link_to label, date_seminars_path(month: index)
   .col-md-10
     = render 'seminars/table', seminars: @seminars, header: false
-
+    .row: .col-md-12: .pull-right = paginate @seminars
