--- a/app/views/seminars/_status.html.slim
+++ b/app/views/seminars/_status.html.slim
@@ -1,5 +1,7 @@
+- if seminar.editing_finished?
+  span.label.label-success>(title=ldate(seminar.editing_finished_at)) Bearbeitung abgeschlossen
 - if seminar.layout_finished?
-  span.label.label-info>(title=ldate(seminar.layout_finished_at)) Layout fertig
+  span.label.label-success>(title=ldate(seminar.layout_finished_at)) Layout fertig
 - if seminar.archived
   span.label.label-warning archiviert
 - elsif seminar.published
