--- a/app/views/seminars/_status.html.slim
+++ b/app/views/seminars/_status.html.slim
@@ -1,7 +1,8 @@
-- if seminar.editing_finished?
-  span.label.label-success>(title=ldate(seminar.editing_finished_at)) Bearbeitung abgeschlossen
-- if seminar.layout_finished?
-  span.label.label-success>(title=ldate(seminar.layout_finished_at)) Layout fertig
+- unless local_assigns[:without_editing_status]
+  - if seminar.editing_finished?
+    span.label.label-success>(title=ldate(seminar.editing_finished_at)) Bearbeitung abgeschlossen
+  - if seminar.layout_finished?
+    span.label.label-success>(title=ldate(seminar.layout_finished_at)) Layout fertig
 - if seminar.editing_changed?
   span.label.label-warning> nachträglich bearbeitet
 
