--- a/app/views/seminars/show/_header.html.slim
+++ b/app/views/seminars/show/_header.html.slim
@@ -12,12 +12,8 @@ ol.breadcrumb
 .page-header
   .buttons
 
-    - if policy(@seminar).finish_editing?
-      => link_to fa_icon('check', text: 'Bearbeitung fertig!'), [@seminar, action: :finish_editing], method: :patch, class: 'btn btn-info'
-    - if @seminar.can_finish_layout?
-      => link_to fa_icon('check', text: 'Layout fertig!'), [@seminar, action: :finish_layout], method: :patch, class: 'btn btn-info'
-    - icon, text, action = @seminar.published? ? ['eye-slash', 'Deaktivieren!', :unpublish] : ['eye', 'Veröffentlichen!', :publish]
-    => link_to fa_icon(icon, text: text), [@seminar, action: action], method: :patch, class: 'btn btn-danger'
+    - icon, text, action, css_class = @seminar.published? ? ['eye-slash', 'Deaktivieren!', :unpublish, 'success'] : ['eye', 'Veröffentlichen!', :publish, 'default']
+    => link_to fa_icon(icon, text: text), [@seminar, action: action], method: :patch, class: "btn btn-#{css_class}"
     => link_to fa_icon('external-link', text: 'Externe Ansicht'), seminar_visitor_url(@seminar), class: 'btn btn-default'
 
     - if @seminar.layout_finished?
@@ -29,7 +25,16 @@ ol.breadcrumb
       => edit_link edit_seminar_url(@seminar)
     = copy_link new_seminar_url(copy_from: @seminar.id)
     br
-    = render 'seminars/status', seminar: @seminar
+    = render 'seminars/status', seminar: @seminar, without_editing_status: true
+    br
+    = simple_form_for @seminar, url: [@seminar, action: :finish_editing], method: :patch do |f|
+      = f.input :editing_finished, as: :boolean, label: 'Bearbeitung abgeschlossen',
+          wrapper_html: { title: ldate(@seminar.editing_finished_at) },
+          input_html: { data: { behavior: 'submit-on-change' }, disabled: !policy(@seminar).finish_editing? }
+    = simple_form_for @seminar, url: [@seminar, action: :finish_layout], method: :patch do |f|
+      = f.input :layout_finished, as: :boolean, label: 'Layout abgeschlossen',
+          wrapper_html: { title: ldate(@seminar.layout_finished_at) },
+          input_html: { data: { behavior: 'submit-on-change' }, disabled: !policy(@seminar).finish_layout? }
   h2
     - if module_parent
       => link_to icon_for(module_parent, text: "#{module_parent.number} - #{module_parent.title}"), module_parent
@@ -43,3 +48,7 @@ ol.breadcrumb
     small
       = @seminar.dates.join(', ')
       =< @seminar.teachers.map(&:name).join(', ')
+
+coffee:
+  $ ->
+    $('[data-behavior=submit-on-change]').change -> $(this).closest('form').submit()
