--- a/app/views/seminars/_table.html.slim
+++ b/app/views/seminars/_table.html.slim
@@ -10,7 +10,9 @@
     table.standard-table.table-clickable.table-no-border.seminars
       tbody
         - seminars.order(:date).includes(:teachers, :events).decorate.each do |seminar|
-          - cache seminar do
+          - attendees_count = seminar.attendees.count
+          - events_count = seminar.events.count
+          - cache [seminar, attendees_count, events_count] do
             tr data = {url: url_for(seminar)}
               td.number
                 = seminar.number
@@ -26,8 +28,8 @@
                 - if seminar.canceled
                   span.label.label-info< ausgefallen
               td.icons
-                => fa_icon 'users', text: seminar.attendees.count
-                => fa_icon 'calendar', text: seminar.events.count
+                => fa_icon 'users', text: attendees_count
+                => fa_icon 'calendar', text: events_count
                 /- if seminar.bookings.any?
                   = progress_bar_for_bookings(seminar)
                 ul.list-inline
