--- a/app/views/seminars/index/_header.html.slim
+++ b/app/views/seminars/index/_header.html.slim
@@ -12,6 +12,7 @@
           - if Catalog.where('year < ?', current_year).exists?
             = link_to search_seminars_path, class: 'btn btn-default' do
               = fa_icon('plus', text: 'Aus Vorjahr kopieren')
+          => link_to fa_icon('table', text: 'Exportieren'), seminars_url(format: :xlsx), class: 'btn btn-default'
           = new_link new_seminar_path
 
 ul.nav.nav-tabs.seminar-views
