Published years (catalog) as tabs on external view

--- a/app/views/buchung/new.html.slim
+++ b/app/views/buchung/new.html.slim
@@ -1,5 +1,5 @@
 - page_title_for @booking
-- content_for :back_link, link_to('&laquo; zur Seminarübersicht'.html_safe, seminare_visitor_path)
+- content_for :back_link, link_to('&laquo; zur Seminarübersicht'.html_safe, seminare_visitor_path, class: 'btn btn-default')
 
 - if @booking.errors.any?
   .alert.alert-danger.alert-dismissable
