--- a/app/views/seminare/_categories.html.slim
+++ b/app/views/seminare/_categories.html.slim
@@ -1,13 +1,8 @@
 ul.nav.nav-pills.nav-stacked.categories
   - categories.each do |category|
-    - active = category.in?(current_path)
-    li class=('active' if active)
-      - seminars_count = category.all_seminars.count
-      /- label = "#{category.display_name} (#{seminars_count})"
-      /- label = category.display_name
-      = link_to seminare_visitor_url(category_id: category.to_param, year: @year), title: category.display_name do
-        span.badge.pull-right
-          small = seminars_count
-        = category.display_name
-      - if active && category.children.any?
+    li class=('active' if category == @category)
+      = link_to category.display_name,
+              seminare_visitor_url(category_id: category.to_param, year: @year),
+              title: category.display_name
+      - if category.children.any?
         = render 'seminare/categories', categories: category.children, current_path: current_path
