--- a/app/views/seminare/index.html.slim
+++ b/app/views/seminare/index.html.slim
@@ -1,30 +1,11 @@
 - content_for :page_title, 'Seminarübersicht'
-- content_for :back_link, link_to('&laquo; zur Seminarübersicht'.html_safe, seminare_visitor_url) if @query.present?
-
 
 ul.nav.nav-tabs.years
   - @published_years.each do |year|
     li class=('active' if year == @year.to_i) = link_to year, seminare_visitor_path(year: year)
 .row
-  .col-md-4
-    = render 'seminare/categories', categories: @catalog.categories.roots, current_path: @category&.path.to_a
-  .col-md-8
-    .table-responsive
-      table.seminars.table.table-hover
-        tbody
-          - @seminars.each do |seminar|
-            - cache seminar do
-              tr class=('time-over' unless seminar.bookable?)
-                td.number
-                  = link_to seminar.number, seminar_visitor_url(seminar)
-                  br
-                  small.text-muted = seminar.year
-                td.title
-                  = link_to seminar.title, seminar_visitor_url(seminar)
-                  br
-                  small.text-muted = seminar.location&.name
-                td = seminar.teachers.map(&:name).join(', ')
-                td = ldate(seminar.events.first&.date)
+  .col-md-4 = render 'seminare/categories', categories: @catalog.categories.roots, current_path: @category&.path.to_a
+  .col-md-8 = render 'table'
 
 sass:
   ul.nav-tabs.years
@@ -44,5 +25,3 @@ sass:
       a
         padding: 3px 8px
         font-size: small
-  table.seminars
-    background-color: white
