--- a/app/views/seminare/search.html.slim
+++ b/app/views/seminare/search.html.slim
@@ -1,8 +1,4 @@
 - content_for :back_link, link_to('&laquo; zur Seminarübersicht'.html_safe, seminare_visitor_path, class: 'btn btn-default')
-
-h2 Anmeldungsbestätigung
-
-= render 'seminar'
-
-p = t('bookings.created')
-
+.row
+  .col-md-2
+  .col-md-10 = render 'table'
