--- a/app/views/seminare/_table.html.slim
+++ b/app/views/seminare/_table.html.slim
@@ -1,23 +1,10 @@
 .table-responsive
-  table.seminars.table.table-hover
+  table.seminars.table.table-hover class=css_class
     tbody
-      - @seminars.order(:date).includes(:teachers).each do |seminar|
+      - seminars.order(:date).includes(:teachers).each do |seminar|
         - cache seminar do
-          tr class=('time-over' unless seminar.bookable?)
+          tr
             td.number   = link_to seminar.number, seminar_visitor_url(seminar)
             td.title    = link_to seminar.title,  seminar_visitor_url(seminar)
             td.teachers = seminar.teachers.map(&:name).join('<br>').html_safe
             td.date     = ldate(seminar.date)
-sass:
-  table.seminars
-    background-color: white
-    tr.time-over
-      color: gray
-      font-style: italic
-    td
-      &.number
-        width: 100px
-      &.teachers
-        min-width: 200px
-      &.date
-        width: 100px
