--- a/app/views/seminare/search.html.slim
+++ b/app/views/seminare/search.html.slim
@@ -1,4 +1,4 @@
 - content_for :back_link, link_to('&laquo; zur Seminarübersicht'.html_safe, seminare_visitor_path, class: 'btn btn-default')
 .row
-  .col-md-3
-  .col-md-9 = render 'table'
+  .col-md-4
+  .col-md-8 = render 'seminars_list', seminars: @seminars
