add editor to seminars

--- a/app/views/seminars/show/_header.html.slim
+++ b/app/views/seminars/show/_header.html.slim
@@ -48,6 +48,9 @@ ol.breadcrumb
     small
       = @seminar.dates.join(', ')
       =< @seminar.teachers.map(&:name).join(', ')
+    - if (editor = @seminar.editor)
+      br
+      small = link_to editor.name, editor
 
 coffee:
   $ ->
