--- a/app/views/seminars/_form.html.slim
+++ b/app/views/seminars/_form.html.slim
@@ -24,11 +24,15 @@
         .row
           .col-md-3 = f.input :archived
           .col-md-3 = f.input :canceled
-        = f.association :parent,
-            label_method: ->(s){ "#{s.number} - #{s.title}" },
-            collection: Seminar.where(parent_id: nil).order(:number),
-            input_html: { class: 'select2' },
-            label: 'Dieses Seminar ist ein Modul von'
+        .row
+          .col-md-6
+            = f.association :editor, label_method: :name, collection: User.editor, input_html: { class: 'select2' }
+          .col-md-6
+            = f.association :parent,
+                label_method: ->(s){ "#{s.number} - #{s.title}" },
+                collection: Seminar.where(parent_id: nil).order(:number),
+                input_html: { class: 'select2' },
+                label: 'Dieses Seminar ist ein Modul von'
         .row
           .col-md-2 = f.input :number
           .col-md-10 = f.input :title
