--- a/app/views/seminars/show/_attendees.html.slim
+++ b/app/views/seminars/show/_attendees.html.slim
@@ -41,6 +41,10 @@ h4
               = link_to attendee.company.name, attendee.company
             - else
               = [attendee.company_title, attendee.invoice_title].select(&:present?).first
+          td = attendee.cancellation_reason
+          td
+            - if attendee.canceled_by_id.present?
+              = attendee.canceled_by.name
           /td
             - invoice = attendee.invoice
             - if invoice
