Show access rights on users#index

--- a/app/views/users/index.html.slim
+++ b/app/views/users/index.html.slim
@@ -17,3 +17,5 @@
           td = user.email
           td = t("users.roles.#{user.role}")
           td = ldate user.last_sign_in_at
+
+= render 'access_rights'
