access_rights in own action

--- a/app/views/users/access_rights.html.slim
+++ b/app/views/users/access_rights.html.slim
@@ -1,17 +1,19 @@
-- roles = User.roles.keys
+.page-header
+  .buttons
+    = list_link User
+  h2 Rollen und Rechte
 
-h4 Rollen und Rechte
 .table-responsive
   table.table.table-bordered.table-hover
     thead
       tr
         th
-        - roles.each do |role|
+        - @roles.each do |role|
           th = t("users.roles.#{role}")
     tbody
-      - access_rights.each do |model_name, actions|
+      - @access_rights.each do |model_name, actions|
         tr
-          th colspan=(roles.size + 1) #{model_name}
+          th colspan=(@roles.size + 1) #{model_name}
         - actions.each do |title, role_rights|
           tr
             td - #{title}
