--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -1,9 +1,13 @@
 - page_title_for @user
 .page-header
   .buttons = delete_link @user
-  h2 = title_for @user
+  h2
+    = title_for @user, with_model: false
+    small =< t("users.roles.#{@user.role}")
 
 = render 'form'
 
 - if @user.editor?
+  h4 Bildungsreferent*in für folgende Semiane
+  => link_to fa_icon('table', text: 'Exportieren'), seminars_user_url(@user, format: :xlsx), class: 'btn btn-default btn-xs'
   = render 'seminars/table', seminars: @user.edited_seminars
