--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -9,7 +9,7 @@ html
   body
     header
       == render 'layouts/navigation'
-    main[role="main"]
+    main.container-fluid[role="main"]
       == render 'layouts/messages'
       == yield
       - if current_user && controller_name != 'feedbacks'
