--- a/app/assets/stylesheets/1st_load_framework.css.sass
+++ b/app/assets/stylesheets/1st_load_framework.css.sass
@@ -35,11 +35,14 @@ main
   padding-bottom: 80px
   margin-top: 70px
 
-@media (min-width: $screen-sm-min)
+@media (min-width: $screen-sm)
   main
     margin-top: 140px
 
-@media (min-width: $screen-md-min)
+@media (min-width: $screen-md)
+  main
+    margin: 70px 70px 0
+@media (min-width: $screen-lg)
   main
     margin: 70px 70px 0
 
