--- a/app/views/layouts/_navigation.html.slim
+++ b/app/views/layouts/_navigation.html.slim
@@ -48,7 +48,11 @@
           = navbar_dropdown current_catalog.title do
             - Catalog.all.each do |catalog|
               li class=('active' if current_catalog == catalog)
-                = link_to catalog.year, [catalog, action: :make_current]
+                = link_to [catalog, action: :make_current] do
+                  - if catalog.published?
+                    = catalog.year
+                  - else
+                    em #{catalog.year} *
           li
             form.navbar-form.navbar-right role="search" action=search_url
               .form-group
